Name: sizes

Version:  2.4.2
Synopsis: Recursively show space (size and i-nodes) used in subdirectories

Description:
  A command-line utility that recursively analyzes directory trees to display
  space usage information, including both file sizes and inode counts. This tool
  provides detailed statistics about disk space consumption in subdirectories,
  making it useful for identifying large files and directories, analyzing storage
  usage patterns, and managing disk space efficiently. The output can be filtered
  and sorted to help locate space-consuming items quickly.

Homepage:           https://github.com/jwiegley/sizes
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Development
Build-type:         Simple
Cabal-version:      >= 1.10

Extra-Source-Files: README.md Stat.hsc HsStat.h HsStat.c

Executable sizes
    Main-is:       Main.hs
    Other-modules: Stat
    Include-dirs:  .
    Includes:      HsStat.h
    c-sources:	   HsStat.c
    ghc-options:   -threaded -with-rtsopts=-K64M

    default-language: Haskell2010

    Build-depends: base            >= 4 && < 5
                 , cmdargs         >= 0.10 && < 0.11
                 , containers      >= 0.5 && < 0.8
                 , deepseq         >= 1.3 && < 1.6
                 , exceptions      >= 0.8 && < 0.11
                 , lens            >= 2.8 && < 6
                 , mtl             >= 2.2 && < 2.4
                 , parallel-io     >= 0.3.2 && < 0.4
                 , regex-pcre      >= 0.95 && < 0.96
                 , system-fileio   >= 0.3.9 && < 0.4
                 , system-filepath >= 0.4.7 && < 0.5
                 , dlist           >= 0.5 && < 1.1
                 , semigroups      >= 0.8 && < 0.21
                 , text            >= 0.11 && < 2.2
                 , unix            >= 2.5 && < 2.9

Source-repository head
  type:     git
  location: https://github.com/jwiegley/sizes
