cabal-version:   2.4
name:            sizes
version:         2.4.3
synopsis:        Recursively show space (size and i-nodes) used in subdirectories
description:
  A command-line utility that recursively analyzes directory trees to display
  space usage information, including both file sizes and inode counts.

homepage:        https://github.com/jwiegley/sizes
license:         BSD-3-Clause
license-file:    LICENSE.md
author:          John Wiegley
maintainer:      John Wiegley <johnw@newartisans.com>
category:        Development
build-type:      Simple

extra-source-files:
  README.md
  Stat.hsc
  HsStat.h
  HsStat.c

library
  exposed-modules:
    Sizes
    Stat

  hs-source-dirs:   .
  include-dirs:     .
  includes:         HsStat.h
  c-sources:        HsStat.c
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat

  build-depends:
    , base            >= 4     && < 5
    , cmdargs         >= 0.10  && < 0.11
    , containers      >= 0.5   && < 0.8
    , deepseq         >= 1.3   && < 1.6
    , dlist           >= 0.5   && < 1.1
    , exceptions      >= 0.8   && < 0.11
    , lens            >= 2.8   && < 6
    , mtl             >= 2.2   && < 2.4
    , parallel-io     >= 0.3.2 && < 0.4
    , regex-pcre      >= 0.95  && < 0.96
    , semigroups      >= 0.8   && < 0.21
    , system-fileio   >= 0.3.9 && < 0.4
    , system-filepath >= 0.4.7 && < 0.5
    , text            >= 0.11  && < 2.2
    , unix            >= 2.5   && < 2.9

executable sizes
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -threaded -with-rtsopts=-K64M

  build-depends:
    , base  >= 4 && < 5
    , sizes

test-suite sizes-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat

  build-depends:
    , base     >= 4   && < 5
    , hedgehog >= 1.0 && < 1.6
    , sizes

source-repository head
  type:     git
  location: https://github.com/jwiegley/sizes
